WebPage::selectPositionAtPoint() does not focus an element in a non-focused frame https://bugs.webkit.org/show_bug.cgi?id=209559 <rdar://problem/60887055>

Reviewed by Wenson Hsieh.

Source/WebKit:

Call setFocusedFrameBeforeSelectingTextAtLocation() in WebPage::selectPositionAtPoint() to
update the focused frame before performing the selection. This way the target element will
be focused by the selection, if not already focused.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::selectPositionAtPoint):

Tools:

Add a test.

* TestWebKitAPI/Tests/ios/UIWKInteractionViewProtocol.mm:
(TEST):

Canonical link: https://commits.webkit.org/222551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259078 268f45cc-cd09-0410-ab3c-d52691b4dbfc